# plugin_dso

./: CMakeLists.txt  README.md  build.sh
include/api/: api.h
include/dependency/: dependency.h
src/api/: api.cc  dependency_stub.cc
src/dependency/: dependency.cc
src/main/: main.cc
src/plugin/: plugin.cc
